<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Relations\Pivot;

class LevelPermission extends Pivot
{
    //
}
